# inspire-genius-backend

./: .gitignore  .gitlab-ci.yml  ALEX_WEBSOCKET_DOCS.md  IG_project_log.html  PRISM_AGENT_WEBSOCKET_DOCS.md  alembic.ini  change_log.md  create_vector_store.py  dev.Dockerfile  dev.docker-compose.yaml  dev.dockerignore  pyproject.toml  readme.md  transfer_embeddings.py
ai/agent_settings/: onboarding.py  req_resp_parser.py  schema.py
ai/ai_agent_services/: agent_utils.py  ai_tools.py  prompts.py
ai/audio_services/: audio_service.py  audio_utils.py  system_config_model.py  voice_config_routes.py
ai/chat_services/: __init__.py  chat_models.py  chat_routes.py  chat_schema.py  title_generator.py
ai/file_services/: convertors.py  file_service.py  req_resp_parser.py  schema.py  utils.py
ai/frontend_text_services/: frontend_text_service.py  req_resp_parser.py  schema.py
ai/models/: __init__.py  agents.py  chat.py  feedback.py  files.py  frontend_text.py
docs/: integration-log.md  meridian-architecture.md  meridian-research.md  performance-slas.md  security-posture.md  workstream-status.md
docs/api-contracts/: auth.ts
load_tests/: README.md  locust.conf  locustfile.py
migrations/: 20260319_add_user_roles.sql
prism_inspire/: main.py
prism_inspire/alembic/: env.py  script.py.mako
prism_inspire/core/: ai_client.py  alexvector.py  api_docs.py  (+9 more)
tests/: PERFORMANCE_OPTIMIZATION_GUIDE.md  test_assistant_helper.py  test_auth_canonical_sub.py  test_delete_user.py  test_edit_user.py  test_frontend_text_audio.py  test_multi_role_auth.py  test_path4_full_text_injection.py  test_phase2_role_endpoints.py  test_phase3_endpoints.py  test_phase4_feedback.py  test_phase5_analytics.py  test_phase6_performance.py  test_phase7_security.py  test_purge_inactive.py  test_vector_store_functions.py  test_voice_e2e.py  test_voice_providers.py  test_voice_regression.py
users/: auth.py  decorators.py  response.py  schemas.py  validators.py
(+238 files in other folders)
